# tuuuui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-14-tuuuui-design.md
src/tuuuui/: __init__.py  __main__.py  app.py  app.tcss  launcher.py
src/tuuuui/core/: __init__.py  buffers.py  git.py  rgrep.py  shell.py  tmux.py  watcher.py
src/tuuuui/widgets/: __init__.py  buffer_list.py  center.py  confirm.py  emacs.py  emacs_list.py  file_view.py  filer.py  git_view.py  rgrep_view.py  search.py  shell.py  workspace.py
tests/: test_app.py  test_autorefresh.py  test_base_marker.py  test_buffers.py  test_center_switch.py  test_emacs.py  test_filer_git.py  test_fixes.py  test_git.py  test_git_view.py  test_launcher.py  test_list_nav.py  test_rgrep.py  test_rgrep_view.py  test_save_close.py  test_shell.py  test_shell_core.py  test_tmux.py  test_watcher.py
