[project]
name = "tuuuui"
version = "0.1.0"
description = "A 3-pane terminal IDE: file tree + emacs editor / git view + workspace, built with Textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=8.0",
]

[project.optional-dependencies]
syntax = ["textual[syntax]>=8.0"]
dev = ["textual-dev>=1.5", "pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
tuuuui = "tuuuui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuuuui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
