[project]
name = "tuuuui"
version = "0.1.0"
description = "A 3-pane terminal IDE: file tree + emacs editor / git view + workspace, built with Textual"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = [
    # The [syntax] extra pulls in tree-sitter + language grammars, which are
    # required for the editor's syntax highlighting to actually render.
    "textual[syntax]>=8.0",
    # Real-time file-system watching (auto-refresh on external edits).
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = ["textual-dev>=1.5", "pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
tuuuui = "tuuuui.__main__:main"
tuuuui-tmux = "tuuuui.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuuuui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
